# metacatalog-api

./: .gitignore  ARCHITECTURE.md  Dockerfile  FETCH_FIXES_SUMMARY.md  FETCH_IMPROVEMENTS.md  Makefile  SVELTE_FETCH_IMPROVEMENTS.md  docker-compose.dev.yml  docker-compose.yml  fetch_implementation_analysis.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml  python-publish.yml
metacatalog_api/: core.py  db.py  default_server.py  models.py  server.py  test.txt  utils.py
metacatalog_api/apps/explorer/: create.py  read.py
metacatalog_api/apps/explorer/templates/: add_datasource.html  add_entry.html  authors.html  entries.html  entry.html  entry.xml  index.html  licenses.html  map.html  page_create_metadata.html  page_entries.html  search_list.html  upload_file.html
metacatalog_api/apps/manager/: README.md  package-lock.json  package.json  router.py  svelte.config.js  vite.config.ts
metacatalog_api/apps/manager/src/: app.css
metacatalog_api/router/api/: create.py  export.py  read.py  share.py  share_provider.py
metacatalog_api/sql/: entries_locations.sql  ftl_search_entries.sql  get_all_variables.sql  get_authors.sql  search_entries.sql
metacatalog_api/sql/maintain/: defaults.sql  install.sql
metacatalog_api/sql/migrate/: migration_5.sql
metacatalog_api/templates/: add_datasource.html  add_entry.html  authors.html  details.html  entry.html  entry.xml  index.html  leaflet_draw.html  license.html  licenses.html  map.html  variables.html
metacatalog_api/views/: editing_tools.py
(+42 files in other folders)
